[package]
name = "drust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
#tracing-subscriber = "0.3"
rand = "0.8"

anyhow = "1"
serde_yaml = "0.9"

#fastrand = "2"

jsonpath_lib = "0.3"

log = "0.4"

chrono-tz = "0.9"

gcp_auth = "0.10" # for local dev; metadata on Cloud Run also supported
urlencoding = "2.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
